@@ -1,7 +1,14 @@
 Changelog for GEMC
 ==================
 
-4/18/18
+4/20/17
+ - added optional argument (appended at the end) to BEAM_P: "KE" can specify that the momentum is kinematic energy instead.
+   For example, to simulate a K=250 MeV proton::
+
+   -BEAM_P="proton, 250*MeV, 90*deg, 90*deg, KE"
+
+
+4/18/17
  - clearing user information for custom generator - it was accumulating each event.
 
 4/13/17
